[package]
name = "__unnamed"
version = "0.1.0"
license = "MIT"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Foundation",
]

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
